--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,31 @@ body {
     color: var(--main-color);
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+img {
+    display: block;
+}
+
+.container {
+width: 1200px;
+padding-left: 15px;
+padding-right: 15px;
+margin-left: auto;
+margin-right: auto;
+outline: 2px solid red;
+}
+
+.section{
+padding-top: 94px;
+padding-bottom: 94px;
+}
+.header {
+    border-bottom: 1px solid #ECECEC;
+}
+
 .logo {
     font-family: Raleway;
     font-weight: 700;
@@ -33,6 +58,10 @@ body {
 
 .list {
     list-style: none;
+            padding: 0;
+            margin: 0;
+            list-style: none;
+        
 }
 
 .link {
@@ -103,6 +132,9 @@ body {
 }
 
  /* benefits */
+.no-padding {
+    padding-bottom: 0;
+}
 
 .benefits .title {
     font-weight: 700;
@@ -121,25 +153,48 @@ body {
 
 /* activity */
 
-.activity>.title, .team>.title {
+.activity .title, .team .title {
     font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
+
 }
 
 /* team */
+.member-list {
+    display: flex;
+}
 
-.member>.name {
+.member {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team {
+    background: #F5F4FA;
+}
+
+.member +.member {
+    margin-left: 30px;
+}
+
+.info {
+padding-top: 30px;
+padding-bottom: 30px;
+}
+
+.member .name {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
+    margin-bottom: 10px;
 }
 
-.member>.post {
+.member .post {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
@@ -151,6 +206,8 @@ body {
 
 .footer {
     background-color: var(--hero-color);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .secondary.white {
