--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,15 @@ img {
     display: block;
 }
 
+.button {
+    display: inline-block;
+        text-align: center;
+        font-family: inherit;
+        cursor: pointer;
+        color: inherit;
+        border-color: transparent;
+}
+
 /* Reset end */
 
 .container {
@@ -50,7 +59,7 @@ padding-left: 15px;
 padding-right: 15px;
 margin-left: auto;
 margin-right: auto;
-outline: 2px solid red;
+/* outline: 2px solid red; */
 }
 
 .section{
@@ -59,12 +68,21 @@ padding-bottom: 94px;
 }
 
 /* Header */
+.header-nav {
+    display: flex;
+}
+
+.nav {
+    display: flex;
+}
 
 .header {
     border-bottom: 1px solid #ECECEC;
 }
 
 .logo {
+    padding-top: 24px;
+    padding-bottom: 25px;
     font-family: Raleway;
     font-weight: 700;
     font-size: 26px;
@@ -83,6 +101,26 @@ padding-bottom: 94px;
 
 
 /* site nav */
+.site-nav {
+    display: flex;
+    margin-left: 93px;
+    align-items: center;
+}
+
+.header-nav {
+display: flex;
+align-items: center;
+}
+
+.contacts-nav {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+}
+
+.site-nav .item:not(:last-child) {
+    margin-right: 50px;
+}
 
 .site-nav .link {
     font-weight: 500;
@@ -90,6 +128,8 @@ padding-bottom: 94px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: inherit;
+    padding-top: 32px;
+    padding-bottom: 32px;
 }
 
 .site-nav .link:hover, 
@@ -110,11 +150,22 @@ padding-bottom: 94px;
     color: var(--accent-color)
 }
 
+.contacts-nav .item+.item {
+    margin-left: 50px;
+}
+
 /* Hero */
 
 .hero {
     color: var(--primary-color);
     background-color: var(--hero-color);
+    padding-top: 200px;
+    padding-bottom: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1600px;
+    text-align: center;
+    
 }
 
 .hero-title {
@@ -129,23 +180,16 @@ padding-bottom: 94px;
 }
 
 .hero .button {
-    display: flex;
-    border-radius: 4px;
-    padding: 10px 32px;
-    cursor: pointer;
-    font-family: inherit;
+    background: var(--accent-color);
     min-width: 216px;
-
-    color: var(--primary-color);
-    background-color: var(--accent-color);
-
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    
+        border-radius: 4px;
+        padding: 10px 32px;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        align-items: center;
+        letter-spacing: 0.06em;
+        color: var(--primary-color);
 }
 
  /* Benefits */
@@ -246,8 +290,18 @@ padding-bottom: 30px;
     padding-bottom: 60px;
 }
 
+.footer .logo {
+    display: inline-block;
+    padding: 0;
+    margin-bottom: 20px;
+}
+
 .secondary.white {
     color: var(--primary-color);
+}
+
+.contacts .item+.item {
+    margin-top: 9px;
 }
 
 .contacts .link {
@@ -278,7 +332,19 @@ padding-bottom: 30px;
     overflow: hidden;
 }
 
+.btn-list {
+    display: flex;
+    justify-content:center;
+    margin-bottom: 50px;
+    align-items: center;
+}
+
+.btn-list .item+.item {
+    margin-left: 8px;
+}
+
 .examples .button {
+    padding: 6px 22px;
     font-weight: 500;
         font-size: 16px;
         line-height: 1.62;
